--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -33,7 +33,7 @@
             <img src="resources/img/banner.webp" alt="Torneo de arqueria">
             <p class="hometoptext">Welcome to the</p>
             <h1 class="title titleMain">WIAC Word Indoor Archery Championship 2025</h1>
-            <p class="datepara">fecha</p>
+            <p class="datepara">06.08.2025 |</p>
             <p class="locationpara">Buenos Aires | Argentina</p>
         </div>
         <div class="containerMain">
@@ -44,13 +44,12 @@
                 <p>
                 Estimados arqueros y aficionados al tiro con arco,<br>
                 Nos complace enormemente invitarles al Campeonato Mundial de Tiro con Arco WIAC 2025, organizado por la Asociación Argentina de Tiro con Arco.
-                El evento se llevará a cabo del (fecha) y se desarrollará siguiendo las normas y reglamentos de la IFAA. La competencia está abierta a miembros de todo el mundo (limitado a X arqueros) en buena posición de los países miembros.
-                El campeonato tendrá lugar en el majestuoso (LOCATION) Este lugar, conocido por sus hermosos paisajes y su rica cultura, será el escenario perfecto para este evento de clase mundial.
-                El alojamiento será proporcionado por una variedad de hoteles y resorts en (LOCATION) Después de un día de competencia, los participantes podrán disfrutar de diversas actividades recreativas y de descanso para recargar energías para el día siguiente.
-                Finalmente, en nombre de la Asociación Argentina de Tiro con Arco, del Comité Organizador del evento y de todos los arqueros argentinos, les damos una cálida bienvenida a (LOCATION) para el Campeonato Mundial de Tiro con Arco WIAC 2025.
-                Atentamente,<br>
-                <strong>Gustavo Stancato</strong> <br>
-                Presidente del Comité Organizador del Campeonato Mundial de Tiro con Arco WIAC 2025</p></div>
+                El evento se llevará a cabo desde el 06.08.2025 hasta el 12.08.2025 y se desarrollará siguiendo las normas y reglamentos de la IFAA. La competencia está abierta a miembros de todo el mundo, limitado a 288 arqueros en buena posición de los países miembros.
+                El campeonato tendrá lugar en el majestuoso Polideportivo General Rodriguez. Este lugar, conocido por sus hermosos paisajes y su rica cultura, será el escenario perfecto para este evento de clase mundial.
+                Finalmente, en nombre de la Asociación Argentina de Tiro con Arco, del Comité Organizador del evento y de todos los arqueros argentinos, les damos una cálida bienvenida a Argentina para el Campeonato Mundial de Tiro con Arco WIAC 2025.
+                Atentamente,</p><br>
+                <strong><p class="pMsg">Gustavo Stancato</p></strong>
+                <p>Presidente del Comité Organizador del Campeonato Mundial de Tiro con Arco WIAC 2025</p></div>
         </div>
             <div class="timer">
                 <div class="fecha"><span id="fecha"><p>WIAC 2025 starts in: </p></span></div>
@@ -77,46 +76,58 @@
         </div>
         <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
         </div>
+        <h3 class="title">Schedule</h3>
         <div class="schedule">
-            <h3>Schedule</h3>
             <div class="scheduleDays">
-                <div class="day"><p>08.08.2025</p><p>Open ceremony</p></div>
-                <div class="day"><p>09.08.2025</p>First Round Indoor</div>
-                <div class="day"><p>10.08.2025</p>Second Round Indoor</div>
-                <div class="day"><p>11.08.2025</p>Third Round Indoor</div>
-                <div class="day"><p>12.08.2025</p>Awards ceremony - Dinner </div>
+                <div class="day"><span><h4>Monday</h4><p>12hs-18hs</p></span>
+                    <span><h4>06.08.2025</h4><p>Set up</p></span>
+                </div>
+                <div class="day"><span><h4>Tuesday</h4><p>8hs-13hs</p><p>8hs-13hs</p><p>13hs-14hs</p><p>15hs-17hs</p></span><span><h4>07.08.2025</h4><p>Registration and equipment Inspection</p><p>Practice range open</p><p>Captains Meeting</p><p>The March of Nations & Opening Ceremony</p>
+                </div>
+                <div class="day"><span><h4>Wednesday</h4><p>8hs-16hs</p><p>8hs-17hs</p><p>9hs-12hs</p><p>13hs-16hs</p><p>17hs-20hs</p></span><span><h4>08.08.2025</h4><p>Registration and Equipment Inspection</p><p>Practice range open</p> <p>1st Round</p><p>2nd Round</p><p>3rd Round</p></span></div>
+                <div class="day"><span><h4>Thursday</h4><p>8hs-13hs</p><p>9hs-12hs</p><p>13hs-16hs</p></span><span><h4>09.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p></span></div>
+                <div class="day"><span><h4>Friday</h4><p>8hs-13hs</p><p>9hs-12hs</p><p>13hs-16hs</p></span><span><h4>10.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p></span></div>
+                <div class="day"><span><h4>Saturday</h4><p>8hs-17hs</p><p>9hs-12hs</p><p>13hs-16hs</p><p>17hs-20hs</p></span><span><h4>11.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p><p>3rd Round</p></span></div>
+                <div class="day"><span><h4>Sunday</h4><p>11hs-15hs</p></span><span><h4>12.08.2025</h4><p>Award Ceremony</p><p>Banquet</p><p>Closing Ceremony</p></span></div>
         </div>
         </div>
         <div class="bookingContainer">
-        <h2 class="subtitle">Book your space</h2>
+    <h2 class="subtitle">Book your space</h2>
         <div class="booking">
             
             <div class="card secondGroup">
                 <h3>Early Bird</h3>
-                <p class="cardUp">Desde la (FECHA) hasta la (FECHA) 2024</p>
-                <p class="precio">€170</p>
-                <p class="cardDown">Adults/juniors & cubs</p>
+                <p class="cardUp">From October 1st 2024 to October 31th 2024</p>
+                <p class="precio">€150</p>
+                <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
+                <p class="precio">€120</p>
+                <p class="cardDown">Cubs</p>
                 <a class="button type1" href="/inscription">
                     <span class="btn-txt">Register</span></a>
             </div>
             <div class="card earlyBird">
                 <h3>SecondCall</h3>
-                <p class="cardUp">Desde la (FECHA) hasta la (FECHA) 2024</p>
+                <p class="cardUp">From November 1st 2024 to January 31th 2025</p>
                 <p class="precio">€170</p>
-                <p class="cardDown">Adults/juniors & cubs</p>
+                <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
+                <p class="precio">€130</p>
+                <p class="cardDown">Cubs</p>
                 <a class="button type1" href="/inscription">
                     <span class="btn-txt">Register</span></a>
             </div>
             <div class="card lastCall">
                 <h3>Last call</h3>
-                <p class="cardUp">Desde la (FECHA) hasta la (FECHA) 2024</p>
-                <p class="precio">€170</p>
-                <p class="cardDown">Adults/juniors & cubs</p>
+                <p class="cardUp">From February 1st 2025 to July 10th 2025</p>
+                <p class="precio">€190</p>
+                <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
+                <p class="precio">€140</p>
+                <p class="cardDown">Cubs</p>
                 <a class="button type1" href="/inscription">
                     <span class="btn-txt">Register</span></a>
         </div>
         </div>
-
+        <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
+        </div>
     </main>
     <footer class="footer">
         <div class="containerFooter">
