--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -50,8 +50,62 @@
             <br>
             
             <label for="federation">Federation(*):</label>
-            <input class="form-control form-control-sm" type="text" id="federation" name="federation" placeholder="Federation" required>
-            <span id="errorFederation" class="error-message"></span>
+            <select class="form-control form-control-sm" id="federation" name="federation" placeholder="Federation" required>
+            <option value="" disabled selected>Select an option</option>
+                <option value="AAE">AAE</option>
+                <option value="AFAA">AFAA</option>
+                <option value="AATA">AATA</option>
+                <option value="ABA">ABA</option>
+                <option value="OBSV">OBSV</option>
+                <option value="RBA">RBA</option>
+                <option value="GAA">GAA</option>
+                <option value="AFB">AFB</option>
+                <option value="BFAA">BFAA</option>
+                <option value="AC">AC</option>
+                <option value="ACH">ACH</option>
+                <option value="AICC">AICC</option>
+                <option value="CZ3D">CZ3D</option>
+                <option value="EFAA">EFAA</option>
+                <option value="FAAE">FAAE</option>
+                <option value="FFAA">FFAA</option>
+                <option value="FFTL">FFTL</option>
+                <option value="DFBV">DFBV</option>
+                <option value="PAPG">PAPG</option>
+                <option value="HKFAA">HKFAA</option>
+                <option value="HAA">HAA</option>
+                <option value="IBA">IBA</option>
+                <option value="FAAI">FAAI</option>
+                <option value="IFAF">IFAF</option>
+                <option value="FIARC">FIARC</option>
+                <option value="LAF">LAF</option>
+                <option value="FAAFL">FAAFL</option>
+                <option value="LAA">LAA</option>
+                <option value="FLTA">FLTA</option>
+                <option value="FAAM">FAAM</option>
+                <option value="KHN">KHN</option>
+                <option value="NZFAA">NZFAA</option>
+                <option value="NIFAA">NIFAA</option>
+                <option value="PTAF">PTAF</option>
+                <option value="PFAA">PFAA</option>
+                <option value="FABP">FABP</option>
+                <option value="FRATF">FRATF</option>
+                <option value="KFAA">KFAA</option>
+                <option value="RAF">RAF</option>
+                <option value="FSTA">FSTA</option>
+                <option value="SFAA">SFAA</option>
+                <option value="SAA">SAA</option>
+                <option value="SANIFAA">"SANIFAA</option>
+                <option value="AAL">AAL</option>
+                <option value="SFSF">SFSF</option>
+                <option value="FAAS">FAAS</option>
+                <option value="TTFAA">TTFAA</option>
+                <option value="FUTARCO">FUTARCO</option>
+                <option value="NFAA">NFAA</option>
+                <option value="VAF">VAF</option>
+                <option value="VIFAF">VIFAF</option>
+                <option value="WFAA">WFAA</option>
+                <option value="AZA">AZA</option>
+            </select>
             <br>
             <label for="country">Country(*):</label>
             <input class="form-control form-control-sm" type="text" id="country" name="country" placeholder="Country" required>
