--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -29,14 +29,18 @@
     </header>
     <main>
         <h1 class="title">Schedule</h1>
-        <div class="schContainer">
-            <div class="schedule">
-                <div class="scheduleDays">
-                    <div class="day"><p>08.08.2025</p><p>Open ceremony</p></div>
-                    <div class="day"><p>09.08.2025</p>First Round Indoor</div>
-                    <div class="day"><p>10.08.2025</p>Second Round Indoor</div>
-                    <div class="day"><p>11.08.2025</p>Third Round Indoor</div>
-                    <div class="day"><p>12.08.2025</p>Awards ceremony - Dinner </div>
+        <div class="schedule">
+            <div class="scheduleDays">
+                <div class="day"><span><h4>Monday</h4><p>12hs-18hs</p></span>
+                    <span><h4>06.08.2025</h4><p>Set up</p></span>
+                </div>
+                <div class="day"><span><h4>Tuesday</h4><p>8hs-13hs</p><p>8hs-13hs</p><p>13hs-14hs</p><p>15hs-17hs</p></span><span><h4>07.08.2025</h4><p>Registration and equipment Inspection</p><p>Practice range open</p><p>Captains Meeting</p><p>The March of Nations & Opening Ceremony</p>
+                </div>
+                <div class="day"><span><h4>Wednesday</h4><p>8hs-16hs</p><p>8hs-17hs</p><p>9hs-12hs</p><p>13hs-16hs</p><p>17hs-20hs</p></span><span><h4>08.08.2025</h4><p>Registration and Equipment Inspection</p><p>Practice range open</p> <p>1st Round</p><p>2nd Round</p><p>3rd Round</p></span></div>
+                <div class="day"><span><h4>Thursday</h4><p>8hs-13hs</p><p>9hs-12hs</p><p>13hs-16hs</p></span><span><h4>09.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p></span></div>
+                <div class="day"><span><h4>Friday</h4><p>8hs-13hs</p><p>9hs-12hs</p><p>13hs-16hs</p></span><span><h4>10.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p></span></div>
+                <div class="day"><span><h4>Saturday</h4><p>8hs-17hs</p><p>9hs-12hs</p><p>13hs-16hs</p><p>17hs-20hs</p></span><span><h4>11.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p><p>3rd Round</p></span></div>
+                <div class="day"><span><h4>Sunday</h4><p>11hs-15hs</p></span><span><h4>12.08.2025</h4><p>Award Ceremony</p><p>Banquet</p><p>Closing Ceremony</p></span></div>
             </div>
         </div>
         <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
