--- a/views/home/ubicacion.ejs
+++ b/views/home/ubicacion.ejs
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Location|WIAC 2025</title>
+    <title>Location | WIAC 2025</title>
 </head>
 <body>
     <header class="header">
@@ -28,8 +28,8 @@
         </nav>
     </header>
     <main class="ubicacionMain">
-        <h1>Location</h1>
-        <div class="ubacionContainer">
+        <h1 class="title">Location</h1>
+        <div class="ubicacionContainer">
             <iframe class="ubicacionIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52536.0220384604!2d-59.03176385136723!3d-34.616768099999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc8f29cca883f1%3A0x1f4a67b15a05c43f!2sPOLIDEPORTIVO%20G.%20RODRIGUEZ!5e0!3m2!1sen!2sit!4v1724320518982!5m2!1sen!2sit" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
